# read

./: .gitignore  Cargo.toml  README
src/: main.rs
src/example/: get_text_chrome.rs  headless.rs  headless_cli.rs  http_client.rs  use_helper.rs  wry_html.rs
src/readability/: macros.rs  mod.rs
src/readability/constants/: mod.rs
src/readability/helper/: mod.rs
src/readability/util/: mod.rs
