[package]
name = "readah"
version = "0.1.0"
edition = "2021"
description = "Key component of Readability module extracted from https://gitlab.com/news-flash/article_scraper."
license = "MIT"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
libxml = "0.2"
reqwest = { version = "0.11", features = ["json", "native-tls", "gzip", "brotli", "stream"] }
tokio = { version = "1.27", features = ["macros", "fs", "io-util", "rt", "rt-multi-thread"] }
url = "2.3"
regex = "1.8"
chrono = "0.4"
base64 = "0.21"
log = "0.4"
once_cell = "1.17"
escaper = "0.1"
http_req = "0.9.1"
anyhow = "1.0.71"
html2text = "0.6.0"
